--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
   --background-clr: #a7bcff;
   --white-clr: white;
   --main-clr: #5d5b8d;
   --button-clr: #7b96ec;
+  --accent-clr: #3e3c61;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .formContainer {
